--- a/app/src/main/res/layout/activity_booking_list.xml
+++ b/app/src/main/res/layout/activity_booking_list.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:background="@drawable/rounded_corner_title"
         android:fontFamily="cursive"
-        android:text="Payment List"
+        android:text="Booking List"
         android:textAlignment="center"
         android:textSize="30dp"
         android:textStyle="bold"
@@ -44,15 +44,27 @@
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/listViewOrder"
         app:layout_constraintVertical_bias="0.2">
 
         <Button
+            android:id="@+id/backButton"
+            android:layout_width="100dp"
+            android:layout_height="50dp"
+            android:layout_marginRight="10dp"
+            android:background="@drawable/button_rounded"
+            android:text="Back"
+            android:textColor="@color/black">
+
+        </Button>
+
+        <Button
             android:id="@+id/PrevPaymentButton"
             android:layout_width="100dp"
             android:layout_height="50dp"
+            android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:textColor="@color/black"
             android:background="@drawable/button_rounded"
