--- a/app/src/main/res/layout/activity_detail_room.xml
+++ b/app/src/main/res/layout/activity_detail_room.xml
@@ -271,19 +271,51 @@
         </androidx.cardview.widget.CardView>
     </ScrollView>
 
-    <Button
-        android:id="@+id/BookButton"
-        android:layout_width="171dp"
-        android:layout_height="50dp"
-        android:layout_weight="1"
-        android:backgroundTint="#98ED89"
-        android:text="Book"
-        android:textColor="@color/black"
-        android:visibility="visible"
+    <LinearLayout
+        android:layout_width="325dp"
+        android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/scrollView2"
-        app:layout_constraintVertical_bias="0.1" />
+        app:layout_constraintVertical_bias="0.35">
 
+        <Button
+            android:id="@+id/BookButton"
+            android:layout_width="100dp"
+            android:layout_height="50dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_weight="1"
+            android:background="@drawable/button_rounded"
+            android:fontFamily="@font/satoshiblack"
+            android:text="Book"
+            android:textColor="@color/black"
+            android:visibility="visible"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.179"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/scrollView2"
+            app:layout_constraintVertical_bias="0.9" />
+
+        <Button
+            android:id="@+id/backButton"
+            android:layout_width="100dp"
+            android:layout_height="50dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_weight="1"
+            android:background="@drawable/button_rounded"
+            android:fontFamily="@font/satoshiblack"
+            android:text="cancel"
+            android:textColor="@color/black"
+            android:visibility="visible"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.933"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/scrollView2"
+            app:layout_constraintVertical_bias="0.9" />
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
